# econ-brief

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  run_log.json  seen_papers.json
.github/workflows/: daily_brief.yml  daily_brief.yml.disabled
config/: journals.yaml  prompts.yaml
output/briefings/: 2026-06-22.md  2026-06-23.md  2026-06-24.md
src/econ_brief/: __init__.py  __main__.py  config.py  constants.py
src/econ_brief/dedup/: __init__.py  deduplicator.py
src/econ_brief/fetchers/: __init__.py  arxiv_fetcher.py  base.py  chinese_fetcher.py  nber_fetcher.py  openalex_fetcher.py
src/econ_brief/llm/: __init__.py  analyzer.py  client.py  prompts.py  scorer.py
src/econ_brief/models/: __init__.py  paper.py
src/econ_brief/output/: __init__.py  email_html.py  email_sender.py  markdown.py
src/econ_brief/output/templates/: email_base.html
src/econ_brief/state/: __init__.py  tracker.py
tests/: test_dedup.py
