[project]
name = "econ-brief"
version = "0.1.0"
description = "Daily economics research briefing automation"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Econ Brief Bot"}]
readme = "README.md"

dependencies = [
    "openai>=1.60",
    "pyalex>=0.15",
    "arxiv>=2.1",
    "feedparser>=6.0",
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "thefuzz>=0.22",
    "python-Levenshtein>=0.25",
    "python-dotenv>=1.0",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "tenacity>=8.0",
]

[project.scripts]
econ-brief = "econ_brief.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-vcr>=1.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
